Updated the google analytics id

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ avatar: http://www.istavrak.com/images/istavrak.jpg
 # Flags below are optional
 #
 
-#google_analytics: UA-6312488-7
+google_analytics: UA-6312488-14
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
