--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,8 @@
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: http://www.istavrak.com/images/istavrak.jpg
 
-#
-# Flags below are optional
-#
+#Disqus
+disqus: vocab-recommender
 
 google_analytics: UA-6312488-14
 
