--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ baseurl: "/vocab-recommender"
 #
 
 markdown: redcarpet
-highlighter: pygments
+highlighter: rouge
 permalink: /:title/
 
 # The release of Jekyll Now that you're using
