--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,12 @@
             </plugin>
         </plugins>
         <finalName>vocab-recommender</finalName>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <excludes><exclude>**/*.java</exclude></excludes>
+            </resource>
+        </resources>
     </build>
 
     <repositories>
