--- a/src/main/java/com/istavrak/vocabrecommender/app.properties
+++ b/src/main/java/com/istavrak/vocabrecommender/app.properties
@@ -4,3 +4,5 @@ vocabularies=590
 lastlovfetch=20170122
 alphafactor=100
 nlp.enabled=false
+search.lodstats.enabled=false
+search.vocabcc.enabled=true
