Add support to show more than one result terms per keyword

--- a/src/main/java/com/istavrak/vocabrecommender/app.properties
+++ b/src/main/java/com/istavrak/vocabrecommender/app.properties
@@ -1,8 +1,9 @@
 # Properties file for vocab-recommender
-version=1.4.0
+version=1.5.0
 vocabularies=590
 lastlovfetch=20170122
 alphafactor=100
 nlp.enabled=true
 search.lodstats.enabled=true
 search.vocabcc.enabled=true
+recommend.terms.max=3
